sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: ')' expected but ',' found.
  for (i <- getValueCount()-1 to 0 by -1,j<- 0 to i-1) {
                                        ^AlgBubbleSort2:7: error: illegal start of simple expression
} 
^